--- a/styleC.css
+++ b/styleC.css
@@ -1,7 +1,7 @@
 body{
     margin: 0;
     padding: 0;
-    background-image: url(/imagenes/CityAlaska.jpg);   
+    background-image: url(imagenes/CityAlaska.jpg);   
     background-size: cover;
     background-position: center;
     font-family: sans-serif;
