--- a/estilos.css
+++ b/estilos.css
@@ -5,4 +5,15 @@ body{
     background-size: cover;
     background-position: center;
     font-family: sans-serif;
+
+}
+.contenedor{
+    background-color: darkblue;
+    height: 30vh;
+    margin: 30%;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    
 }
