--- a/estilos.css
+++ b/estilos.css
@@ -8,12 +8,12 @@ body{
 
 }
 .contenedor{
-    background-color: darkblue;
+    background-color: rgba(0, 0, 139, 0.377);
     height: 30vh;
     margin: 30%;
     display: flex;
     flex-direction: row;
     justify-content: center;
     align-items: center;
-    
+
 }
