--- a/styleC.css
+++ b/styleC.css
@@ -6,3 +6,15 @@ body{
     background-position: center;
     font-family: sans-serif;
 }
+.contenedor{
+    background-color: rgba(0, 139, 104, 0.377);
+    height: 80vh;
+    margin: 30%;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+
+}   
+
+
