--- a/estilos.css
+++ b/estilos.css
@@ -8,9 +8,8 @@ body{
 
 }
 .contenedor{
-    background-color: rgba(0, 0, 139, 0.377);
+    background-color: rgba(255, 255, 255, 0.658);
     height: 30vh;
-    margin: 30%;
     display: flex;
     flex-direction: row;
     justify-content: center;
@@ -20,4 +19,9 @@ body{
 #bien{
     position: relative;
     top: 10px;
+}
+#cate{
+    background-color: rgba(34, 32, 32, 0.5);
+    margin: 0 130px;
+
 }
